<resources>
    <string name="app_name">双定位</string>
    <string name="register">注册</string>
    <string name="multi_register">多企业注册</string>
    <string name="mobile_phone">手机号:  </string>
    <string name="shipment_code">运单号:  </string>
    <string name="driver_identification">司机身份证号:  </string>
    <string name="enterprise_code">企业号:  </string>
    <string name="enterprise_code_one">企业号1:  </string>
    <string name="enterprise_code_two">企业号2:  </string>
    <string name="enterprise_code_three">企业号3:  </string>
    <string name="login_key_one">LoginKey1:  </string>
    <string name="login_key_two">LoginKey2:  </string>
    <string name="login_key_three">LoginKey3:  </string>
    <string name="login_secret_one">LoginSecret1:  </string>
    <string name="login_secret_two">LoginSecret2:  </string>
    <string name="login_secret_three">LoginSecret3:  </string>
    <string name="nfc_id">NfcId:  </string>
    <string name="driver_invoice_code">driverInvoiceCode:  </string>
    <string name="page_size">pageSize:  </string>
    <string name="current_page">currentPage:  </string>
    <string name="clear_tip_message">清除提醒信息</string>
    <string name="one_key_input">一键填写</string>
    <string name="one_key_clear_input">一键清除填写</string>
    <string name="query_shipment_status">查询运单状态</string>
    <string name="pickup">提货</string>
    <string name="arrive">到货</string>
    <string name="sign">签收</string>
    <string name="pod">回单</string>
    <string name="upload_arrive_image">上传到货照片</string>
    <string name="upload_pod_image">上传回单照片</string>
    <string name="delete_arrive_image">删除到货照片</string>
    <string name="delete_pod_image">删除回单照片</string>
    <string name="get_arrive_image_list">获取到货照片列表</string>
    <string name="get_arrive_image">获取到货照片</string>
    <string name="get_pod_image_list">获取回单照片列表</string>
    <string name="get_pod_image">获取回单照片</string>
    <string name="verify_nfc">验证NFC</string>
    <string name="get_unconfirmed_invoice">获取待同意发票</string>
    <string name="confirm_invoice">同意发票申请</string>
</resources>
