<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alct.mdpsdksample.ui.LocationActivity">

    <TextView
        android:id="@+id/warning_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:overScrollMode="never"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shipment_code" />

                <EditText
                    android:id="@+id/shipmentCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enterprise_code" />

                <EditText
                    android:id="@+id/currentEnterprise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nfc_id" />

                <EditText
                    android:id="@+id/nfcId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_invoice_code" />

                <EditText
                    android:id="@+id/driverInvoiceCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/page_size" />

                    <EditText
                        android:id="@+id/pageSize"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_page" />

                    <EditText
                        android:id="@+id/currentPage"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/clear_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_tip_message" />

            <Button
                android:id="@+id/mock_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_key_input" />

            <Button
                android:id="@+id/clear_mock_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_key_clear_input" />

            <Button
                android:id="@+id/view_shipment_status_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/query_shipment_status" />

            <Button
                android:id="@+id/buttonPickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pickup" />

            <Button
                android:id="@+id/buttonUnload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arrive" />

            <Button
                android:id="@+id/buttonSign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign" />

            <Button
                android:id="@+id/buttonPod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pod" />

            <Button
                android:id="@+id/buttonUploadUnloadImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_arrive_image" />

            <Button
                android:id="@+id/buttonUploadPODImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_pod_image" />

            <Button
                android:id="@+id/buttonDeleteUnloadImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_arrive_image" />

            <Button
                android:id="@+id/buttonDeletePODImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_pod_image" />

            <Button
                android:id="@+id/buttonGetUnloadImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_arrive_image_list" />

            <Button
                android:id="@+id/buttonGetPODImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_pod_image_list" />

            <Button
                android:id="@+id/buttonGetUnloadImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_arrive_image" />

            <Button
                android:id="@+id/buttonGetPODImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_pod_image" />

            <Button
                android:id="@+id/buttonCheckNfc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_nfc" />

            <Button
                android:id="@+id/buttonGetInvoices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_unconfirmed_invoice" />

            <Button
                android:id="@+id/buttonConfirmInvoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_invoice" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>